<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E5ADB"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"

        android:padding="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0000ff"
            android:padding="8dp"
            android:text="@string/titulo_principal"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descr_valor_da_conta"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:paddingHorizontal="10dp"
            android:paddingVertical="2dp"
            android:textSize="12sp"  />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/edit_valor"
            android:hint="@string/hint_valor_da_conta"
            android:paddingHorizontal="10dp"
            android:paddingVertical="4dp"
            android:textColor="@color/black"
            android:inputType="numberDecimal"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descr_dinhero"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="2dp"
            android:textSize="12sp"  />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_dinheiro"
            android:hint="@string/valor_dinheiro"
            android:paddingHorizontal="10dp"
            android:paddingVertical="4dp"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_limpar"
                android:text="@string/limpar_valores"
                android:onClick="limparValores"
                android:backgroundTint="#949393"
                android:layout_marginHorizontal="8dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_calcular"
                android:text="@string/calcular"
                android:onClick="calcular"
                android:backgroundTint="#949393"
                android:layout_marginHorizontal="8dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/taxa_service"
            android:textColor="@color/black"
            android:gravity="center"
            android:paddingVertical="2dp"
            android:textSize="18sp"  />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/taxa"
            android:text="@string/valor_taxa"
            android:textColor="@color/black"
            android:gravity="center"
            android:paddingVertical="2dp"
            android:textSize="18sp"  />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:paddingVertical="2dp"
            android:textSize="18sp"  />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/total"
            android:text="@string/valor_total"
            android:textColor="@color/black"
            android:gravity="center"
            android:paddingVertical="2dp"
            android:textSize="18sp"  />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/troco"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:paddingVertical="2dp"
            android:textSize="18sp"  />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/troco"
            android:text="@string/valor_troco"
            android:textColor="@color/black"
            android:gravity="center"
            android:paddingVertical="2dp"
            android:textSize="18sp"  />

    </LinearLayout>



</ScrollView>